Autogenerated/Bindings/CSharp/Lib3MF.cs


			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_beamlattice_setball", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 BeamLattice_SetBall (IntPtr Handle, UInt32 AIndex, InternalBall ABallInfo);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_beamlattice_setballs", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 BeamLattice_SetBalls (IntPtr Handle, UInt64 sizeBallInfo, IntPtr dataBallInfo);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_beamlattice_getballs", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 BeamLattice_GetBalls (IntPtr Handle, UInt64 sizeBallInfo, out UInt64 neededBallInfo, IntPtr dataBallInfo);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_beamlattice_getbeamsetcount", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 BeamLattice_GetBeamSetCount (IntPtr Handle, out UInt32 ACount);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_beamlattice_addbeamset", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 BeamLattice_AddBeamSet (IntPtr Handle, out IntPtr ABeamSet);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_beamlattice_getbeamset", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 BeamLattice_GetBeamSet (IntPtr Handle, UInt32 AIndex, out IntPtr ABeamSet);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedataitem_getvolumetricstack", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeDataItem_GetVolumetricStack (IntPtr Handle, out IntPtr ATheVolumetricStack);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedataitem_setvolumetricstack", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeDataItem_SetVolumetricStack (IntPtr Handle, IntPtr ATheVolumetricStack);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedataitem_gettransform", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeDataItem_GetTransform (IntPtr Handle, out InternalTransform ATransform);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedataitem_settransform", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeDataItem_SetTransform (IntPtr Handle, InternalTransform ATransform);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedatalevelset_getsolidthreshold", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeDataLevelset_GetSolidThreshold (IntPtr Handle, out Double ATheSolidThreshold);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedatalevelset_setsolidthreshold", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeDataLevelset_SetSolidThreshold (IntPtr Handle, Double ATheSolidThreshold);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedatalevelset_setchannel", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeDataLevelset_SetChannel (IntPtr Handle, byte[] AChannelName);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedatalevelset_getchannel", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeDataLevelset_GetChannel (IntPtr Handle, UInt32 sizeChannelName, out UInt32 neededChannelName, IntPtr dataChannelName);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedatacolor_setchannel", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeDataColor_SetChannel (IntPtr Handle, Int32 ATheColorChannel, byte[] AChannelName);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedatacolor_getchannel", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeDataColor_GetChannel (IntPtr Handle, Int32 ATheColorChannel, UInt32 sizeChannelName, out UInt32 neededChannelName, IntPtr dataChannelName);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedatacomposite_getbasematerialgroup", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeDataComposite_GetBaseMaterialGroup (IntPtr Handle, out IntPtr ABaseMaterialGroupInstance);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedatacomposite_setbasematerialgroup", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeDataComposite_SetBaseMaterialGroup (IntPtr Handle, IntPtr ABaseMaterialGroupInstance);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedatacomposite_getmaterialmappingcount", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeDataComposite_GetMaterialMappingCount (IntPtr Handle, out UInt32 ACount);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedatacomposite_getmaterialmapping", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeDataComposite_GetMaterialMapping (IntPtr Handle, UInt32 AIndex, out UInt32 APropertyID, UInt32 sizeChannelName, out UInt32 neededChannelName, IntPtr dataChannelName);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedatacomposite_setmaterialmapping", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeDataComposite_SetMaterialMapping (IntPtr Handle, UInt32 AIndex, out UInt32 APropertyID, UInt32 sizeChannelName, out UInt32 neededChannelName, IntPtr dataChannelName);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedatacomposite_addmaterialmapping", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeDataComposite_AddMaterialMapping (IntPtr Handle, UInt32 APropertyID, byte[] AChannelName);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedatacomposite_removematerialmapping", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeDataComposite_RemoveMaterialMapping (IntPtr Handle, UInt32 AIndex);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedataproperty_setchannel", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeDataProperty_SetChannel (IntPtr Handle, byte[] AChannelName);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedataproperty_getchannel", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeDataProperty_GetChannel (IntPtr Handle, UInt32 sizeChannelName, out UInt32 neededChannelName, IntPtr dataChannelName);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedataproperty_setname", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeDataProperty_SetName (IntPtr Handle, byte[] APropertyName);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedataproperty_getname", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeDataProperty_GetName (IntPtr Handle, UInt32 sizePropertyName, out UInt32 neededPropertyName, IntPtr dataPropertyName);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedataproperty_setisrequired", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeDataProperty_SetIsRequired (IntPtr Handle, Byte AIsRequired);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedataproperty_isrequired", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeDataProperty_IsRequired (IntPtr Handle, out Byte AIsRequired);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedata_getlevelset", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeData_GetLevelset (IntPtr Handle, out IntPtr ATheLevelsetData);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedata_createnewlevelset", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeData_CreateNewLevelset (IntPtr Handle, IntPtr ATheVolumetricStack, out IntPtr ATheLevelsetData);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedata_getcomposite", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeData_GetComposite (IntPtr Handle, out IntPtr ATheCompositeData);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedata_createnewcomposite", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeData_CreateNewComposite (IntPtr Handle, IntPtr ATheVolumetricStack, out IntPtr ATheCompositeData);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedata_getcolor", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeData_GetColor (IntPtr Handle, out IntPtr ATheColorData);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedata_createnewcolor", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeData_CreateNewColor (IntPtr Handle, IntPtr ATheVolumetricStack, out IntPtr ATheColorData);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedata_getpropertycount", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeData_GetPropertyCount (IntPtr Handle, out UInt32 ACount);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedata_getproperty", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeData_GetProperty (IntPtr Handle, UInt32 AIndex, out IntPtr AThePropertyData);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedata_findproperty", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeData_FindProperty (IntPtr Handle, byte[] AName, out IntPtr AThePropertyData);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedata_addproperty", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeData_AddProperty (IntPtr Handle, byte[] AName, IntPtr ATheVolumetricStack, out IntPtr AThePropertyData);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumedata_removeproperty", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumeData_RemoveProperty (IntPtr Handle, byte[] AName);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_component_getobjectresource", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Component_GetObjectResource (IntPtr Handle, out IntPtr AObjectResource);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_component_getobjectresourceid", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Component_GetObjectResourceID (IntPtr Handle, out UInt32 AUniqueResourceID);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_component_getuuid", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Component_GetUUID (IntPtr Handle, out Byte AHasUUID, UInt32 sizeUUID, out UInt32 neededUUID, IntPtr dataUUID);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_component_setuuid", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Component_SetUUID (IntPtr Handle, byte[] AUUID);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_component_hastransform", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Component_HasTransform (IntPtr Handle, out Byte AHasTransform);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_component_gettransform", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Component_GetTransform (IntPtr Handle, out InternalTransform ATransform);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_component_settransform", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Component_SetTransform (IntPtr Handle, InternalTransform ATransform);
